# Megu

./: Cargo.toml  LICENSE  README.md  docker-compose.yml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: check.yml
cli/: Cargo.toml
cli/src/: build.rs  main.rs  ws.rs
debug_util/cmd/: Cargo.toml
debug_util/cmd/src/: main.rs
debug_util/files/: a.hir.meg  fn.meg
libs/aidan-rs/: Cargo.toml  README.md
libs/aidan-rs/src/: define.rs  expression.rs  lib.rs  module.rs  types.rs  utils.rs
libs/aidan-rs/src/define/: function.rs
libs/aidan-rs/src/expression/: call.rs
libs/aidan-rs/src/module/: feature.rs
libs/aidan-rs/src/operaters/: import.rs
libs/aidan-rs/tests/: module.rs
libs/compiler/ast/src/: defs.rs  lib.rs  stmts.rs  util.rs
libs/compiler/converts/hir_nspace/: Cargo.toml
libs/compiler/converts/hir_nspace/src/: lib.rs
libs/compiler/converts/parser/: Cargo.toml
libs/compiler/converts/parser/src/: lib.rs  parsers.rs  tokens.rs
libs/compiler/converts/to_hir/: Cargo.toml
libs/compiler/converts/to_hir/src/: defs.rs  file_item.rs  lib.rs
libs/compiler/defs/ast/: Cargo.toml
libs/compiler/defs/ast/src/: defs.rs  exprs.rs  lib.rs  stmts.rs  util.rs  values.rs
libs/compiler/defs/codes/: Cargo.toml
libs/compiler/defs/codes/src/: lib.rs
libs/compiler/defs/hir/: Cargo.toml
libs/compiler/defs/hir/src/: exprs.rs  file_items.rs  internals.rs  (+2 more)
libs/compiler/meguc_main/: Cargo.toml
libs/compiler/meguc_main/src/: lib.rs
libs/compiler/parser/: Cargo.toml
libs/compiler/parser/src/: lib.rs  parsers.rs  tokens.rs
libs/utils/src/: lib.rs  scc.rs
