[package]
name = "meg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive"] }
toml = "0"
anyhow.workspace = true
codes = { path = "../libs/compiler/defs/codes" }
meguc_main = { path = "../libs/compiler/meguc_main"}
utils = { path = "../libs/utils"}