[package]
name = "parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# internal dependencies
ast = { path = "../ast" }

# external dependencies
peg = "0.8.2"
logos = "0.13.0"
anyhow.workspace = true