[package]
name = "parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# internal dependencies
ast = { path = "../../defs/ast" }

# external dependencies
peg = {version = "0", features = ["trace"]}
logos = "0.13.0"
anyhow.workspace = true